   - ofaTVARecordProperties: review the validation dynamics (todo #1253).
   - ofaTVARecordStore: complete column content (todo #1247).
   - ofaTVARecordTreeview: rename column header (todo #1247).
   - UI: review dialog boxes layout (todo #1184).

 Bug fixes:

   - ofaAccountProperties: fix error message when identifier is empty (todo #1256).
   - ofaMiscAuditUI: display DBMS audit trace (todo #1252).
   - ofaOpeTemplateProperties: does not double the rows count on Cancel (todo #1250).
   - ofaRecPeriodProperties: does not unref spin adjustment.
   - ofaRecPeriodProperties: fix UI widget name.
   - ofaRecurrentModelManagement: fix sort of 'Enabled' column (todo #1257).
   - ofaTVAFormProperties: does not unref spin adjustment.
   - ofaTVARecordPage: fix deletability check (todo #1248).

 Other changes:

   - ofaMiscAuditStore: new class.
   - ofaMiscAuditTreeview: new class.

-----------------------------------------------------------------------
 Version 0.62
 ============

 Released on 2016-11-09
  
 New features and improvements:

   - Error messages are full sentences (todo #1244).
   - Homogeneize Importers version numbers (todo #1240).
   - Plugin manager now displays the implemented DB models (todo #1241).
   - Have transactions when generating entries (todo #89).

 Bug fixes:

   - ofaITVColumnable: defines a dedicated scope (todo #1221, #1234).
   - Fix ledger closing.
   - Means of paiement page: double-click opens the properties dialog (todo #1245).

 Other changes:

   - ofaIThemeManager: renamed to ofaIPageManager (todo #1242).
   - ofaPaimeanFrameBin: is not an ofaIActioner.
   - ofaPeriodicity: remove obsoleted functions.

-----------------------------------------------------------------------
 Version 0.61
 ============

 Released on 2016-10-23
  
 New features and improvements:

   - Core DB model v33
   - Recurrent DB model v6, v7
   - ofaAccountProperties: let the user sort the archived soldes (todo #1163).