@@ -54,6 +54,7 @@
  Bug fixes:
 
    - ofaAccountProperties: fix error message when identifier is empty (todo #1256).
+   - ofaCheckBalancesBin: does not increment account balances when amounts are nul (todo #1259).
    - ofaMiscAuditUI: display DBMS audit trace (todo #1252).
    - ofaOpeTemplateProperties: does not double the rows count on Cancel (todo #1250).
    - ofaRecPeriodProperties: does not unref spin adjustment.
